# mindwise

./: .gitignore  Makefile  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.mysql.sql  0001_initial_schema.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  assets.py  auth.py  jobs.py  projects.py  system.py
backend/app/core/: celery_app.py  config.py  database.py  deps.py  exceptions.py  logging.py  security.py
backend/app/models/: __init__.py  asset.py  auth_session.py  base.py  enums.py  job.py  observability.py  project.py  user.py
backend/app/repositories/: __init__.py  job_repository.py  project_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  common.py  job.py  planning.py  project.py  system.py
backend/app/services/assets/: __init__.py  icon_service.py
backend/app/services/auth/: __init__.py  service.py
backend/app/services/composition/: ffmpeg.py  (+1 more)
backend/app/templates/: video_presets.json
backend/app/workers/: __init__.py  tasks.py
backend/mindwise_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: dev.ps1  migrate.ps1  seed_demo.py  worker.ps1
backend/tests/: conftest.py
backend/tests/api/: test_projects_and_jobs.py
backend/tests/services/: test_ffmpeg_composer.py  test_layout_engine.py  test_math_engine.py  test_planning_engine.py  test_provider_registry.py  test_stable_horde.py  test_tts_service.py
backend/tests/workers/: test_retry_and_resume.py
(+46 files in other folders)
